# rotten-tomatoes-forecasting

./: .gitignore  BACKLOG.md  CLAUDE.md  LICENSE  PROMPTS.md  SOURCES.md  brainstorm_hierarchical_p_fresh.md  plan.md  pyproject.toml
notebooks/: kalshi_analysis.ipynb
rt-price-histories/28_years_later/: kalshi-price-history-kxrt28yearslater-day.csv  kalshi-price-history-kxrt28yearslater-hour.csv  kalshi-price-history-kxrt28yearslater-minute.csv
rt-price-histories/28_years_later_the_bone_temple/: kalshi-price-history-kxrt28yearslatertbt-day.csv  kalshi-price-history-kxrt28yearslatertbt-hour.csv  kalshi-price-history-kxrt28yearslatertbt-minute.csv
rt-price-histories/a_complete_unknown/: kalshi-price-history-kxrtacompleteunknown-day.csv  kalshi-price-history-kxrtacompleteunknown-hour.csv  kalshi-price-history-kxrtacompleteunknown-minute.csv
rt-price-histories/a_minecraft_movie/: kalshi-price-history-kxrtminecraft-day.csv  kalshi-price-history-kxrtminecraft-hour.csv  kalshi-price-history-kxrtminecraft-minute.csv
rt-price-histories/a_quiet_place_day_one/: kalshi-price-history-rtquietplacedayone-day.csv  kalshi-price-history-rtquietplacedayone-hour.csv  kalshi-price-history-rtquietplacedayone-minute.csv
rt-price-histories/abigail_2024/: kalshi-price-history-rtabigail-day.csv  kalshi-price-history-rtabigail-hour.csv  kalshi-price-history-rtabigail-minute.csv
rt-price-histories/alien_romulus/: kalshi-price-history-rtalienromulus-day.csv  kalshi-price-history-rtalienromulus-hour.csv  kalshi-price-history-rtalienromulus-minute.csv
(+402 files in other folders)
