[project]
name = "rt-analysis"
version = "0.1.0"
description = "Kalshi bet probability analysis for Rotten Tomatoes movies"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pandas>=2.0",
    "numpy>=2.0",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "ipykernel>=6.29",
    "notebook>=7.0",
    "nbstripout>=0.8",
]
